argo/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: marfeel-ns
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
